--- a/HW_shop.html
+++ b/HW_shop.html
@@ -41,7 +41,7 @@
           <li><a href="#">purchase</a></li>
         </ul>
         <div class="search">
-          <input type="search" id="search" placeholder="Search...">
+          <input type="text" id="search" placeholder="Search...">
           <img id="lupa" src="./img/lupa.png" alt="lupa">
         </div>
         <a class="stock" href="#"><img src="./img/stock.png" alt=""></a>
